--- a/shared/src/main/res/xml/settings_global.xml
+++ b/shared/src/main/res/xml/settings_global.xml
@@ -78,6 +78,12 @@
             android:entryValues="@array/notification_actions_values" />
 
         <SwitchPreference
+            android:key="@string/pref_history_in_notifications"
+            android:title="@string/show_conversation_history"
+            android:summary="@string/show_conversation_history_summary"
+            android:defaultValue="true" />
+
+        <SwitchPreference
             android:key="@string/pref_delivery_reports"
             android:title="@string/delivery_reports"
             android:defaultValue="false" />
