--- a/shared/src/main/res/layout/item_attach_contact.xml
+++ b/shared/src/main/res/layout/item_attach_contact.xml
@@ -14,19 +14,20 @@
   ~ limitations under the License.
   -->
 
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="90dp"
-    android:layout_height="90dp">
+    android:layout_height="90dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/picture"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="2dp"
         android:foreground="?attr/selectableItemBackground"
         android:contentDescription="@null"
-        android:clickable="true" />
+        android:clickable="true"
+        app:civ_border_width="0dp" />
 
     <TextView
         android:id="@+id/name"
@@ -38,6 +39,7 @@
         android:layout_gravity="bottom|end"
         android:textColor="@android:color/white"
         android:maxLines="1"
-        android:ellipsize="end" />
+        android:ellipsize="end"
+        android:visibility="gone"/>
 
 </FrameLayout>
