--- a/shared/src/main/res/layout/item_attach_contact.xml
+++ b/shared/src/main/res/layout/item_attach_contact.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
   ~ Copyright (C) 2016 Jacob Klinker
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -15,8 +16,9 @@
   -->
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="90dp"
-    android:layout_height="90dp"
+    android:layout_width="56dp"
+    android:layout_height="56dp"
+    android:layout_marginStart="6dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -24,7 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="2dp"
-        android:foreground="?attr/selectableItemBackground"
+        android:foreground="?selectableItemBackgroundBorderless"
         android:contentDescription="@null"
         android:clickable="true"
         app:civ_border_width="0dp" />
