prepare beta update

--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -17,12 +17,18 @@
 <changelog>
 
     <version
+        name="2.2.8"
+        description="May 2nd, 2017">
+        <text>Bug fixes</text>
+    </version>
+
+    <version
         name="2.2.7"
         description="April 27th, 2017">
         <text>Settings UI overhaul</text>
         <text>Improvements to the system level private notification support</text>
     </version>
-  
+
     <version
         name="2.2.6"
         description="April 25th, 2017">
