--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -20,6 +20,7 @@
         name="2.2.8"
         description="May 2nd, 2017">
         <text>Bug fixes</text>
+        <text>Translation updates</text>
     </version>
 
     <version
