--- a/api_implementation/src/main/res/values-zh-rCN/api_string.xml
+++ b/api_implementation/src/main/res/values-zh-rCN/api_string.xml
@@ -22,7 +22,7 @@
     <string name="api_skip">跳过</string>
     <string name="api_email">邮箱地址</string>
     <string name="api_password">密码</string>
-    <string name="api_forgot_password">忘记密码？</string>
+    <string name="api_forgot_password">忘记密码</string>
     <string name="api_password_confirmation">密码确认</string>
     <string name="api_name">名字</string>
     <string name="api_phone_number">电话号码</string>
@@ -41,6 +41,8 @@
     <string name="api_no_phone_number">你还没输入电话号码呢</string>
     <string name="api_login_error">登录失败，请检查一下邮箱地址和密码</string>
     <string name="api_activate_summary">登录帐号来将你的消息同步到此设备</string>
+    <string name="api_activate_1">1</string>
+    <string name="api_activate_2">2</string>
     <string name="api_activate_1_1">指向</string>
     <string name="api_activate_1_2">tv.klinkerapps.com</string>
     <string name="api_activate_1_3">在一个移动设备或计算机上</string>
