--- a/wear/src/main/res/layout/activity_activate.xml
+++ b/wear/src/main/res/layout/activity_activate.xml
@@ -120,7 +120,7 @@
 
         </LinearLayout>
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -133,7 +133,6 @@
                 android:layout_height="wrap_content"
                 android:text="@string/api_confirm_password"
                 android:textColor="@android:color/white"
-                android:layout_marginLeft="4dp"
                 android:layout_marginStart="4dp"
                 android:id="@+id/confirmation_summary"/>
 
@@ -142,24 +141,20 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/api_password"
                 android:id="@+id/password"
-                android:layout_below="@+id/confirmation_summary"
                 android:inputType="textPassword"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
                 android:textColor="@color/api_login_background"
                 android:gravity="center"
                 android:drawableStart="@drawable/api_forward"
-                android:layout_toRightOf="@+id/password"
-                android:layout_toEndOf="@+id/password"
-                android:layout_alignTop="@+id/password"
-                android:layout_alignBottom="@+id/password"
+                android:layout_marginTop="12dp"
                 android:id="@+id/confirm"
-                android:layout_centerVertical="true"
                 android:background="?android:selectableItemBackgroundBorderless"/>
 
-        </RelativeLayout>
+        </LinearLayout>
 
     </FrameLayout>
 
