--- a/shared/src/main/res/values/arrays.xml
+++ b/shared/src/main/res/values/arrays.xml
@@ -87,6 +87,7 @@
         <item>@string/vibrate_one_long_one_short</item>
         <item>@string/vibrate_one_short</item>
         <item>@string/vibrate_one_long</item>
+        <item>@string/vibrate_one_extra_long</item>
     </string-array>
 
     <string-array name="vibrate_values">
@@ -99,6 +100,7 @@
         <item>vibrate_one_long_one_short</item>
         <item>vibrate_one_short</item>
         <item>vibrate_one_long</item>
+        <item>vibrate_one_extra_long</item>
     </string-array>
 
     <string-array name="repeat">
