add some notes for a new, undocumented, broadcast that I found in the Android Messages app

--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -21,6 +21,7 @@
         description="June 1st, 2017">
         <text>Fixes for marking messages as sent when using the strip unicode option</text>
         <text>Added "extra long" vibration pattern</text>
+        <text>Bug fixes and stability improvements</text>
     </version>
 
     <version
