--- a/shared/src/main/res/xml/contact_settings.xml
+++ b/shared/src/main/res/xml/contact_settings.xml
@@ -48,6 +48,7 @@
     </xyz.klinker.messenger.shared.view.MaterialPreferenceCategory>
 
     <xyz.klinker.messenger.shared.view.MaterialPreferenceCategory
+        android:key="@string/pref_contact_notification_group"
         android:title="@string/notification_settings">
 
         <SwitchPreference
@@ -71,6 +72,10 @@
             android:key="@string/pref_contact_led_color"
             android:title="@string/led_color"
             app:display_normalize="true"/>
+
+        <Preference
+            android:key="@string/pref_contact_notification_channel"
+            android:title="@string/channel_settings" />
 
     </xyz.klinker.messenger.shared.view.MaterialPreferenceCategory>
 
